# Python

Agent/: 大模型调用&MCP.ipynb
Agent/Agent技术框架/: ReAct Agent代码详解.md  用ReAct框架实现简单Agent.py
Agent/OpenAI API&LangChain和LlamaIndex/: LangChain示例.py  OpenAI api示例.py
Agent/RAG_智能客服与知识问答/: README.md  requirements.txt  代码执行流程详解.md
Agent/mcp/: mcp_client.py  openai_client.py  server.py
Agent/个性化与记忆_教育辅导/: README.md
Agent/多智能体/: pyproject.toml
Agent/多智能体/docs/: 学习笔记.md
Agent/多智能体/scripts/: direct_check.py  run_demo.py
Agent/多智能体/src/multi_agent/: agents.py  langgraph_workflow.py  llm_qwen.py
Agent/多智能体/src/multi_agent/a2a/: orchestrator.py  protocol.py
Agent/多智能体/tests/: test_a2a_modes.py  test_langgraph_workflow.py
Agent/多模态创意生成/: README.md  config.py  main.py  requirements.txt
Agent/多角色游戏对话体/: README.md
Agent/实时多智能体_金融决策/: README.md
Agent/自我演进_商业报告/: README.md  main.py  requirements.txt
Flask/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py
Flask/project_demo/: config.py  run.py  错误处理详解.md  项目详解.md
Flask/templates/: hello.html
RAG/: extract_pdf.py  readme.md
RAG/RAG三问/: langchain构建RAG简单示例.py  llamaIndex构建RAG简单示例.py
RAG/信息嵌入/: LangChain提供的嵌入接口.py  LlamaIndex提供的嵌入接口.py
RAG/数据导入/: LangChain读取txt文件生成Document对象.py  LlamaIndex读取文档.py  Markdown文件标题和结构.py  PyMuPDF读取pdf文件.py  从指定目录加载各种类型的文件.py  使用CSVLoader导入数据.py  创建langchain的Document对象.py  用JSON加载器解析特定元素.py  用LlamaHub连接Reader并读取数据库条目.py  用Marker工具把PDF文档转换为Markdown格式.py  用PyPDFLoader进行简单文本提取.py  用千问多模态模型解析PDF.py  (+6 more)
tools/: convert_markdown_2_pdf.py  demo.py  sql_export.py  stt.py  test_dm_sql.py
(+69 files in other folders)
